# devbridge-loop

./: .gitignore  Makefile  README.md  findings.md  progress.md  task_plan.md
.github/workflows/: dev-agent-a15-matrix.yml
agent-core/: go.mod
apps/dev-agent/: components.json  index.html  package-lock.json  package.json  (+3 more)
apps/dev-agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/dev-agent/src-tauri/capabilities/: default.json
apps/dev-agent/src-tauri/src/: agent_api.rs  agent_manager.rs  host_config.rs  lib.rs  main.rs
apps/dev-agent/src-tauri/src/agent_host/: auth.rs  codec.rs  event_bridge.rs  frame.rs  ipc_client.rs  launcher.rs  mod.rs  router.rs  supervisor.rs
apps/dev-agent/src-tauri/src/commands/: agent.rs  app.rs  config.rs  diagnose.rs  mod.rs  service.rs  session.rs  system.rs  traffic.rs  tunnel.rs
apps/dev-agent/src-tauri/src/state/: app_state.rs
cloud-bridge/: go.mod  go.sum
docs/: Agent-TauriConnectionModelExecutionChecklist.md  Agent-and-Bridge-ExecutionChecklist.md  Agent‑and‑Bridge‑Implementation‑Technical‑Design.md  Agent–TauriLocalCommunicationDesignProposal.md  BridgeAdminBackendExecutionChecklist.md  BridgeAdminBackendTechnicalProposal.md  CodeStyle.md  LTFP-FullExecutionChecklist.md  LTFP-TransportAbstraction.md  LTFP-TransportDiagnosticsSamples.md  LTFP-TransportExecutionChecklist.md  LTFP-TunnelMultiplex-Proposal.md  LTFP-v1-Draft.md  ProjectDevelopmentChecklist.md  ProjectDevelopmentPlan.md  ProjectTechnicalSolution.md  ScaffoldQuickStart.md  UI-Agent-Bridge-Unimplemented-Checklist.md
examples/: bridge-config.yaml  bridge-local-discovery.json  go.mod
ltfp/: Makefile  README.md  go.mod  go.sum
service-registry/: agentcore_client.go  agentcore_client_test.go  basic_types.go  basic_types_test.go  go.mod  registry.go  watcher.go
(+385 files in other folders)
