[package]
name = "dev-agent"
version = "0.1.0"
description = "DevLoop Desktop Host"
authors = ["DevLoop Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "dev_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.8.5", features = ["tray-icon"] }
tauri-plugin-dialog = "2.0.0-rc.8"
thiserror = "2.0.16"
