[package]
name = "dev-agent"
version = "0.1.0"
description = "Dev Agent desktop shell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = "0.2"
hmac = "0.12"
sha2 = "0.10"
fs2 = "0.4"
sysinfo = "0.30.13"
serde_yaml = "0.9.34"
